# Real-Time-Rasterizer

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: Camera.cpp  Camera.h  Entity.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Shader.h  Texture.cpp  Texture.h  Transform.h  main.cpp
